# fundamentos-analise-dados

./: README.md  pyproject.toml
notebooks/: 01_data_matrix.ipynb
trabalho01/: 01_data_matrix-Copy1.ipynb  tests.ipynb
trabalho01_regressao/: trabalho01_regressao_naval_dataset.ipynb
trabalho01_regressao/Trabalho1/apresentação/: main.tex
trabalho01_regressao/Trabalho1/tex/: bibliography.bib  main.tex
trabalho02_classificacao/: accuracy.txt  accuracy_list.txt  accuracy_list_svd.txt  accuracy_svd.txt  t02_SVD_prediction.ipynb  t02_data_manipulation.ipynb  trabalho02.ipynb  trabalho02_concrete_crack.ipynb
trabalho02_classificacao/Trabalho2/python/: t02_SVD_prediction.ipynb
trabalho02_classificacao/Trabalho2/tex/: bibliography.bib  main.tex
trabalho02_classificacao/Trabalho2/tex/apresentação/: main.tex
