[tool.poetry]
name = "fundamentos-analise-dados"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
jupyter = "^1.0.0"
pandas = "^1.4.1"
notebook = "^6.4.8"
jupyterlab = "^3.3.1"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
